integ-tests/tests/snapshots/parser__bad_floats__trailing_dec.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing_dec:1:7
  │
1 │ a = 0.
  │       ^ unable to parse number


