integ-tests/tests/snapshots/parser__bad_floats__trailing_exp2.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing_exp2:1:7
  │
1 │ a = 0.E
  │       ^ unable to parse number


