integ-tests/tests/snapshots/parser__bad_floats__trailing_exp4.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing_exp4:1:5
  │
1 │ a = 0.0e
  │     ^ unable to parse number


